--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="logo">
           <img src="logo.png" alt="" />
         </div>
-        <h1>ALONG PIXELS</h1>
+        <h1>RUDRA SAXENA</h1>
       </div>
       <div class="project">
         <div class="reel">
